
=============================================================
Version 2.2.10
=============================================================

	- Feature: [import] Added compatibility with the new 4.x version of the Colissimo Simplicite plugin
	- Bugfix: [export] Get a specific ean, upc or reference when product attribute is equal at 1

=============================================================
Version 2.2.9
=============================================================

	- Bugfix: [export] Retrieval of the Lengow selection for the multi-shop
	- Bugfix: [export] Get specific product images by shop
	- Bugfix: [action] Get additional argument if argument list is empty
	- Bugfix: [action] Recovery and display of the return of the api
	- Bugfix: [action] Don't send default value for additional argument

=============================================================
Version 2.2.8
=============================================================

	- Bugfix: [import] Stop import for order without billing address
	- Bugfix: [import] Get a specific state for order shipping by marketplace

=============================================================
Version 2.2.7
=============================================================

	- Feature: [action] Add new carrier_name parameter for action
	- Bugfix: [import] Fix bug import order with tracking data

=============================================================
Version 2.2.6
=============================================================

    - Feature: [export] Get a specific format for csv stream
	- Feature: [import] Get product when reference begins by numbers
	- Bugfix: Change tabs attribute by lengowTabs for Prestashop 1.7.1.1
	- Bugfix: [import] Delete import for orders in accepted status

=============================================================
Version 2.2.5
=============================================================

    - Feature: Rewrite for compatibility with the new Prestashop validator