@@ -22,6 +22,7 @@ Version 2.2.10
 
 	- Feature: [import] Added compatibility with the new 4.x version of the Colissimo Simplicite plugin
 	- Bugfix: [export] Get a specific ean, upc or reference when product attribute is equal at 1
+	- Bugfix: [import] Get delivery phone number when billing and shipping addresses are the same
 
 =============================================================
 Version 2.2.9
